ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cassandra-ingress-nip-io
  namespace: k8ssandra-operator
spec:
  ingressClassName: nginx
  rules:
    - host: cassandra.172.16.240.240.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: demo-dc1-stargate-service
                port:
                  number: 9042
