petclinic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-backend
  namespace: k8ssandra-operator
  labels:
    app: petclinic-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-backend
  template:
    metadata:
      labels:
        app: petclinic-backend
    spec:
      containers:
        - name: petclinic-backend
          image: "datastaxdevs/petclinic-backend:k8ssandra"
          #command: ["tail"]
          #args: ["-f", "/dev/null"]
---
kind: Service
apiVersion: v1
metadata:
  name: petclinic-backend
  namespace: k8ssandra-operator
spec:
  #type: NodePort
  selector:
    app: petclinic-backend
  ports:
    # Default port used by the image
    - port: 9966
      #targetPort: 9966
      #nodePort: 30000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-frontend
  namespace: k8ssandra-operator
  labels:
    app: petclinic-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-frontend
  template:
    metadata:
      labels:
        app: petclinic-frontend
    spec:
      containers:
        - name: petclinic-frontend
          image: "datastaxdevs/petclinic-frontend"
          #command: ["tail"]
          #args: ["-f", "/dev/null"]
---
kind: Service
apiVersion: v1
metadata:
  name: petclinic-frontend
  namespace: k8ssandra-operator
spec:
  selector:
    app: petclinic-frontend
  ports:
    - port: 8081
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petstore-frontend-ingress-nip-io
  namespace: k8ssandra-operator
spec:
  rules:
    - host: petstore.172.16.240.240.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petclinic-frontend
                port:
                  number: 8081
          - path: /petclinic/api
            pathType: Prefix
            backend:
              service:
                name: petclinic-backend
                port:
                  number: 9966
